Simplified the directory output structure
specify the output directory in config.yaml

--- a/example/config.yaml
+++ b/example/config.yaml
@@ -1,8 +1,6 @@
-named_conf: ./pdns_zones
-zones_dir: ./output
-
 ruby_zones: ./zones/
 templates: ./templates/
+output: ./generated/
 
 # Command to run after push
 execute: '/bin/echo happy'
